# nearobject-framework

windows/: README.md
windows/devices/uwb/: UwbCxAdapterDdiLrp.cxx  UwbDeviceConnector.cxx
windows/nearobject/winrt/: CMakeLists.txt  nearobject-winrt.sln
windows/nearobject/winrt/app/Windows.Devices.NearObject.Service.App/: WinMain.cpp  Windows.Devices.NearObject.Service.App.exe.manifest  Windows.Devices.NearObject.Service.App.vcxproj  packages.config  pch.h  readme.txt
windows/nearobject/winrt/app/Windows.Devices.NearObject.Service.Test/: PropertySheet.props  WinMain.cpp  Windows.Devices.NearObject.Service.Test.vcxproj  pch.h  readme.txt
windows/nearobject/winrt/dll/: CMakeLists.txt
windows/nearobject/winrt/dll/Windows.Devices.NearObject.Dll/: Dll.cpp  Windows.Devices.NearObject.Dll.vcxproj  pch.h
windows/nearobject/winrt/dll/Windows.Devices.NearObject.DllHost/: Windows.Devices.NearObject.DllHost.vcxproj  readme.txt
windows/nearobject/winrt/idl/Windows.Devices.NearObject.Service/: NearObjectService.idl  Windows.Devices.NearObject.Service.vcxproj
windows/nearobject/winrt/lib/Windows.Devices.NearObject.Lib/: NearObject.cpp  NearObjectSession.cpp  Windows.Devices.NearObject.Lib.vcxproj  readme.txt
windows/nearobject/winrt/lib/Windows.Devices.NearObject.Service.Lib/: Windows.Devices.NearObject.Service.Lib.vcxproj
windows/nearobject/winrt/lib/Windows.Devices.NearObject.System/: NearObjectService.cpp  NearObjectService.h  NearObjectService.idl  Windows.Devices.NearObject.System.vcxproj  readme.txt
windows/nearobject/winrt2/: nearobject-winrt.sln
(+17 files in other folders)
